# BEBLaDII

./: .gitignore.bak  CITATION.cff  Logo.png~  README.md  evaluate_lengths.py  ki_config.json  pyproject.toml  scratch_check_hf.py
.know/: doc_config.json
data/: .gitkeep
experiments/: .gitkeep  REDEPLOY_GUIDE.md  TPU_GUIDE.md  setup_tpu_vm.sh  train_phase1_TPU.py  train_phase1_TPU_fsdp.py  train_phase1_kaggle.ipynb  train_phase1_kaggle.py  train_phase1_kaggle_save20260418.py
ideas/: Architecture.md  BEBLaDII idea.md  BEBLaDII_Overview_EN.md  Many-words tokens.md  Masked_Temporal_Diffusion.md  No-data processing.md  Phase 1 implementation plan.md  Phase 1.md  Starting_Templates_Prior.md  Training phases.md  Words importance for cristallization.md  thinking_patterns_in_RAG.md  Архитектурный аудит и решения.md  Использование MCP и контекст задачи.md  Обсуждение фазы 2, работы RAG и головы.md
kaggle_upload_1_1/: dataset-metadata.json
kaggle_upload_1_2/: dataset-metadata.json
kaggle_upload_1_3/: dataset-metadata.json
kaggle_upload_1_4/: dataset-metadata.json
reports/: phase1_awakening_report.md
scratch/: calc_params.py  check_ckpt_keys.py  check_exact_keys.py  check_notebook_syntax.py  check_target_ckpt.py  check_teacher.py  check_tensor_stats.py  find_checkpoints.py  init_components.py  inspect_best_model.py  inspect_culturax.py  inspect_data.py  inspect_open_thoughts.py  inspect_simple.py  inspect_weights.py  search_keys.py  test_map_behavior.py  update_notebook_metrics.py  update_notebook_v2.py
scripts/: build_prebuilt_latentbert.py  check_model_keys.py  (+18 more)
(+135 files in other folders)
